@@ -8,12 +8,11 @@ import pl.com.dolittle.mkelo.control.third.ELOMatch;
 import pl.com.dolittle.mkelo.entity.Game;
 import pl.com.dolittle.mkelo.entity.Player;
 import pl.com.dolittle.mkelo.entity.Result;
+import pl.com.dolittle.mkelo.exception.AuthenticationFailedException;
 import pl.com.dolittle.mkelo.services.FileService;
-import pl.com.dolittle.mkelo.util.AuthenticationFailedException;
 
 import java.time.LocalDateTime;
 import java.util.*;
-import java.util.stream.Collectors;
 
 @Controller
 public class Games {
@@ -21,7 +20,7 @@ public class Games {
 
     @Autowired
     private FileService fileService;
-    private LinkedList<Game> games = new LinkedList<>();
+    private List<Game> games = new LinkedList<>();
 
     private final Players players;
 
@@ -37,29 +36,29 @@ public class Games {
             throw new AuthenticationFailedException();
         }
         var rankingPlayers = ranking.stream()
-                .map(l -> l.stream().map(uuid -> players.getById(uuid).orElseThrow()).collect(Collectors.toList()))
-                .collect(Collectors.toList());
+                .map(l -> l.stream().map(uuid -> players.getById(uuid).orElseThrow()).toList())
+                .toList();
         var match = new ELOMatch();
         for (int i = 0; i < rankingPlayers.size(); i++) {
             for (var player : rankingPlayers.get(i)) {
-                match.addPlayer(player.uuid, i+1, player.elo);
+                match.addPlayer(player.getUuid(), i+1, player.getElo());
             }
         }
         match.calculateELOs();
-        LOGGER.info(match.toString());
+        LOGGER.info("match info: {}", match);
 
         var rankingResult = rankingPlayers.stream()
                 .map(l -> l.stream().map(p -> {
-                            var oldElo = p.elo;
-                            p.elo = match.getELO(p.uuid);
-                            p.gamesPlayed++;
-                            return new Result(p, oldElo, p.elo);
+                            var oldElo = p.getElo();
+                            p.setElo(match.getELO(p.getUuid()));
+                            p.incrementGamesPlayed();
+                            return new Result(p, oldElo, p.getElo());
                         })
-                        .collect(Collectors.toList()))
-                .collect(Collectors.toList());
+                        .toList())
+                .toList();
 
         updatePlayersData(match);
-        games.addFirst(new Game(reportedTime, reportedBy.orElseThrow(), rankingResult));
+        games.add(0, new Game(reportedTime, reportedBy.orElseThrow(), rankingResult));
         fileService.putGamesDataToS3(games);
     }
 
@@ -74,8 +73,8 @@ public class Games {
 
     private void updatePlayersData(ELOMatch match){
         Map<String, Player> playersData = fileService.getPlayersDataFromS3();
-        playersData.forEach((k, v) -> { if(match.checkIfIsPlayer(v.uuid)){v.elo = match.getELO(v.uuid);
-        v.gamesPlayed++;}
+        playersData.forEach((k, v) -> { if(match.checkIfIsPlayer(v.getUuid())){v.setElo(match.getELO(v.getUuid()));
+        v.incrementGamesPlayed();}
         });
         fileService.putPlayersDataToS3(playersData);
     }
